fix align

--- a/src/App.css
+++ b/src/App.css
@@ -381,6 +381,7 @@ li .link:hover {
   }
   .header-title a span {
     vertical-align: middle;
+    text-align: center;
   }
 
   .about {
